[gd_scene load_steps=16 format=2]

[ext_resource path="res://juego6/script/player.gd" type="Script" id=1]
[ext_resource path="res://juego6/art/a0.png" type="Texture" id=2]
[ext_resource path="res://juego6/art/a3.png" type="Texture" id=3]
[ext_resource path="res://juego6/art/a1.png" type="Texture" id=4]
[ext_resource path="res://juego6/art/a2.png" type="Texture" id=5]
[ext_resource path="res://juego6/art/a11.png" type="Texture" id=6]
[ext_resource path="res://juego6/art/a12.png" type="Texture" id=7]
[ext_resource path="res://juego6/art/a13.png" type="Texture" id=8]
[ext_resource path="res://juego6/art/a14.png" type="Texture" id=9]
[ext_resource path="res://juego6/art/a15.png" type="Texture" id=10]
[ext_resource path="res://juego6/art/a9.png" type="Texture" id=11]
[ext_resource path="res://juego6/art/a8.png" type="Texture" id=12]
[ext_resource path="res://juego6/art/a10.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 6 ) ],
"loop": true,
"name": "right",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "up",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.0

[node name="player" type="Area2D"]
position = Vector2( 438, 239 )
script = ExtResource( 1 )
speed = 150

[node name="as_player" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "down"

[node name="cs_player" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
